fixed list alignment layout for posts

--- a/core/wp-content/themes/vanhelbergen/sass/_blogpost.scss
+++ b/core/wp-content/themes/vanhelbergen/sass/_blogpost.scss
@@ -14,4 +14,9 @@
 
 .post {
   margin-bottom: 6 * $baseFontSize;
+
+  ul,
+  ol {
+    list-style-position: outside;
+  }
 }
